[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/map.jpg" type="Texture" id=1]
[ext_resource path="res://Scripts/blips.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Camera.gd" type="Script" id=3]
[ext_resource path="res://Scripts/SettingsPanel.gd" type="Script" id=4]

[node name="Main" type="Node"]
__meta__ = {
"_edit_horizontal_guides_": [ -4611.67 ],
"_edit_vertical_guides_": [ -4608.53 ]
}

[node name="map" type="Sprite" parent="."]
scale = Vector2( 1.50017, 1.50119 )
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="HTTPRequest" type="HTTPRequest" parent="map"]

[node name="PlayerBlips" type="Node" parent="map"]

[node name="Cam" type="Camera2D" parent="."]
z_index = 5
current = true
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0
editor_draw_limits = true
editor_draw_drag_margin = true
script = ExtResource( 3 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="blocker" type="ColorRect" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.258824, 0.258824, 0.258824, 0.74902 )

[node name="SettingsCol" type="Panel" parent="UI"]
modulate = Color( 0, 0, 0, 0 )
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -60.0
mouse_filter = 1

[node name="SettingsPanel" type="Panel" parent="UI"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -40.0
mouse_filter = 2
script = ExtResource( 4 )

[node name="Tween" type="Tween" parent="UI/SettingsPanel"]

[node name="bg" type="ColorRect" parent="UI/SettingsPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.121569, 0.121569, 0.121569, 1 )

[node name="host" type="LineEdit" parent="UI/SettingsPanel"]
margin_left = 10.0
margin_top = 10.0
margin_right = 210.0
margin_bottom = 34.0
align = 3
clear_button_enabled = true
placeholder_text = "127.0.0.1"

[node name="user" type="LineEdit" parent="UI/SettingsPanel"]
margin_left = 220.0
margin_top = 10.0
margin_right = 350.0
margin_bottom = 34.0
align = 3
clear_button_enabled = true
placeholder_text = "Account name"

[node name="pass" type="LineEdit" parent="UI/SettingsPanel"]
margin_left = 360.0
margin_top = 10.0
margin_right = 490.0
margin_bottom = 34.0
align = 3
secret = true
clear_button_enabled = true
placeholder_text = "Password"

[node name="Button" type="Button" parent="UI/SettingsPanel"]
margin_left = 500.0
margin_top = 10.0
margin_right = 590.0
margin_bottom = 34.0
toggle_mode = true
text = "Connect"

[node name="Status" type="Label" parent="UI/SettingsPanel"]
visible = false
margin_left = 600.0
margin_top = 10.0
margin_right = 610.0
margin_bottom = 34.0
valign = 1

[node name="Timer" type="Timer" parent="UI/SettingsPanel"]
wait_time = 2.0

[connection signal="mta_connect" from="map" to="UI/SettingsPanel" method="_on_mta_connect"]
[connection signal="mta_connect_failed" from="map" to="UI/SettingsPanel" method="_on_mta_connect_failed"]
[connection signal="request_completed" from="map/HTTPRequest" to="map" method="_on_HTTPRequest_request_completed"]
[connection signal="mouse_entered" from="UI/SettingsCol" to="UI/SettingsPanel" method="_on_SettingsCol_mouse_entered"]
[connection signal="mouse_exited" from="UI/SettingsCol" to="UI/SettingsPanel" method="_on_SettingsCol_mouse_exited"]
[connection signal="gui_input" from="UI/SettingsPanel/host" to="UI/SettingsPanel" method="onEnterPressed"]
[connection signal="mouse_entered" from="UI/SettingsPanel/host" to="UI/SettingsPanel" method="_on_SettingsCol_mouse_entered"]
[connection signal="gui_input" from="UI/SettingsPanel/user" to="UI/SettingsPanel" method="onEnterPressed"]
[connection signal="mouse_entered" from="UI/SettingsPanel/user" to="UI/SettingsPanel" method="_on_SettingsCol_mouse_entered"]
[connection signal="gui_input" from="UI/SettingsPanel/pass" to="UI/SettingsPanel" method="onEnterPressed"]
[connection signal="mouse_entered" from="UI/SettingsPanel/pass" to="UI/SettingsPanel" method="_on_SettingsCol_mouse_entered"]
[connection signal="mouse_entered" from="UI/SettingsPanel/Button" to="UI/SettingsPanel" method="_on_SettingsCol_mouse_entered"]
[connection signal="toggled" from="UI/SettingsPanel/Button" to="UI/SettingsPanel" method="_on_Button_toggled"]
[connection signal="timeout" from="UI/SettingsPanel/Timer" to="UI/SettingsPanel" method="_on_Timer_timeout"]
